@@ -10,6 +10,7 @@ Date: ????
     - Replicated /evolution
     - Replicated /time
     - Replicated /reply & /r
+    - Replicated /color
   Bugfixes:
     - /w and /s now actually work
     - Whispering now can't crash if there's no recipient passed
